--- a/main.tex
+++ b/main.tex
@@ -3,13 +3,13 @@
 \title{テスト}
 
 \begin{document}
-    \section{aaaa}
+    \section{こんにちは}
 
     \section{iii}
         iiiii
 
     \begin{thebibliography}{99}
-        \bibitem{ref1} 足uuu
+        \bibitem{ref1} uuu
     \end{thebibliography}
 
 \end{document}
