--- a/test.tex
+++ b/test.tex
@@ -5,7 +5,7 @@
 \begin{document}
     \section{こんにちは}
 
-    \section{あいうえお}
+    \section{あいうえおお}
         iiiii
 
     \begin{thebibliography}{99}
